# plugin-ida

./: .editorconfig  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  ida-plugin.json  mypy.ini  pyproject.toml  requirements.txt  threatray_plugin.py  vulture_whitelist.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
tests/fixtures/: code_detections_settings_fixtures.py  expected.csv
tests/helpers/: fixtures.py  helper.py  mock_function_retrohunt_ui_facade.py  mock_functions_code_detections_ui_facade.py  mock_ida_api.py  mock_table_controller.py  mock_threatray_api.py
tests/integration/: run_tests.py
tests/unit/: run_tests.py  test_hamcrest.py  test_logger.py
threatray_ida/: constants.py  logger.py  plugin_dependencies.py
threatray_ida/adapters/: function_retrohunt_response_converter.py  functions_code_detections_response_converter.py  functions_diff_response_converter.py  functions_response_converter.py  ida_api_impl.py  settings_provider_implementation.py  threatray_api_error.py  threatray_api_impl.py  threatray_plugin_setup_error.py  threatray_url_generator.py
threatray_ida/application/: cluster_analysis_service.py  cluster_analysis_ui_facade.py  color_selector.py  color_selector_factory.py  function_retrohunt_service.py  function_retrohunt_ui_facade.py  functions_code_detections_service.py  functions_code_detections_ui_facade.py  mediator_implementation.py  settings_provider.py  threatray_api.py
threatray_ida/domain/: address.py  address_offset.py  cluster_analysis_settings.py  file.py  function.py  function_match.py  function_uid.py  (+13 more)
(+89 files in other folders)
